force-app/main/default/objects/Services_Late_Billing__c/Services_Late_Billing__c.object-meta.xml
<CustomObject>
    <label>Services Late Billing</label>
    <nameField>
        <label>Services Late Billing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services Late Billings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>