force-app/main/default/objects/Services_Late_Billing__c/fields/Billed_Amt_US__c.field-meta.xml
<CustomField>
    <fullName>Billed_Amt_US__c</fullName>
    <label>Billed Amt US</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>