force-app/main/default/objects/Services_Late_Billing__c/fields/Unique_id__c.field-meta.xml
<CustomField>
    <fullName>Unique_id__c</fullName>
    <externalId>true</externalId>
    <label>Unique Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>